account.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quest
  name: accounts
  labels:
    app: accs
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accs
      tier: backend
  template:
    metadata:
      labels:
        app: accs
        tier: backend
    spec:
      volumes:
        - name: accounts
          persistentVolumeClaim:
            claimName: appclaim1
      containers:
      - name: accounts-api
        image: accounts-api
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /accounts
            name: accounts
        resources:
          limits:
            cpu: "0.35"
            memory: 212Mi
          requests:
            cpu: "0.3"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quest
  name: accounts-server
  labels:
    app: accs
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accs
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: accs
        tier: frontend
    spec:
      containers:
      - name: accounts-server
        image: accounts-server
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.35"
            memory: 212Mi
          requests:
            cpu: "0.3"
      restartPolicy: Always
status: {}
