account.service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: quest
  name: accounts-intel
  labels:
    app: accs
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: accs
    tier: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  namespace: quest
  name: accounts-action
  labels:
    app: accs
    tier: frontend
spec:
  ports:
  - name: "81"
    port: 802
    targetPort: 8000
  selector:
    app: accs
    tier: frontend
status:
  loadBalancer: {}
