ingress.service.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: quest
  name: quest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: questarenz.com
      http:
        paths:
        - backend:
            serviceName: accounts-action
            servicePort: 802

    - host: arena.questarenz.com
      http:
        paths:
        - backend:
            serviceName: arena-action
            servicePort: 810

    - host: spotlights.questarenz.com
      http:
        paths:
        - backend:
            serviceName: spots-action
            servicePort: 820
